--- a/Chińczyk.vcxproj
+++ b/Chińczyk.vcxproj
@@ -21,6 +21,7 @@
   <ItemGroup>
     <ClCompile Include="Board.cpp" />
     <ClCompile Include="Pawn.cpp" />
+    <ClCompile Include="Player.cpp" />
     <ClCompile Include="Tile.cpp" />
     <ClCompile Include="Game.cpp" />
     <ClCompile Include="Ludo.cpp" />
@@ -28,6 +29,7 @@
   <ItemGroup>
     <ClInclude Include="Board.h" />
     <ClInclude Include="Pawn.h" />
+    <ClInclude Include="Player.h" />
     <ClInclude Include="TeamName.h" />
     <ClInclude Include="Tile.h" />
     <ClInclude Include="Game.h" />
@@ -37,16 +39,19 @@
     <None Include="images\tile.xcf" />
   </ItemGroup>
   <ItemGroup>
-    <Image Include="images\arrow.png" />
     <Image Include="images\Barrow.png" />
+    <Image Include="images\Bpawn.png" />
     <Image Include="images\Garrow.png" />
+    <Image Include="images\Gpawn.png" />
     <Image Include="images\Rarrow.png" />
+    <Image Include="images\Rpawn.png" />
     <Image Include="images\tile.png" />
     <Image Include="images\tileBlue.png" />
     <Image Include="images\tileGreen.png" />
     <Image Include="images\tileRed.png" />
     <Image Include="images\tileYellow.png" />
     <Image Include="images\Yarrow.png" />
+    <Image Include="images\Ypawn.png" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <VCProjectVersion>17.0</VCProjectVersion>
