--- a/Chińczyk.vcxproj
+++ b/Chińczyk.vcxproj
@@ -21,7 +21,7 @@
   <ItemGroup>
     <ClCompile Include="Board.cpp" />
     <ClCompile Include="Pawn.cpp" />
-    <ClCompile Include="Player.cpp" />
+    <ClCompile Include="Team.cpp" />
     <ClCompile Include="Tile.cpp" />
     <ClCompile Include="Game.cpp" />
     <ClCompile Include="Ludo.cpp" />
@@ -29,8 +29,7 @@
   <ItemGroup>
     <ClInclude Include="Board.h" />
     <ClInclude Include="Pawn.h" />
-    <ClInclude Include="Player.h" />
-    <ClInclude Include="TeamName.h" />
+    <ClInclude Include="Team.h" />
     <ClInclude Include="Tile.h" />
     <ClInclude Include="Game.h" />
   </ItemGroup>
