--- a/Chińczyk.vcxproj
+++ b/Chińczyk.vcxproj
@@ -20,6 +20,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Board.cpp" />
+    <ClCompile Include="Menu.cpp" />
     <ClCompile Include="TossButton.cpp" />
     <ClCompile Include="Dial.cpp" />
     <ClCompile Include="Pawn.cpp" />
@@ -30,6 +31,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Board.h" />
+    <ClInclude Include="Menu.h" />
     <ClInclude Include="TossButton.h" />
     <ClInclude Include="Dial.h" />
     <ClInclude Include="Pawn.h" />
