--- a/Chińczyk.vcxproj.filters
+++ b/Chińczyk.vcxproj.filters
@@ -39,6 +39,9 @@
     <ClCompile Include="Dial.cpp">
       <Filter>Source files</Filter>
     </ClCompile>
+    <ClCompile Include="Menu.cpp">
+      <Filter>Source files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Game.h">
@@ -60,6 +63,9 @@
       <Filter>Header files</Filter>
     </ClInclude>
     <ClInclude Include="Dial.h">
+      <Filter>Header files</Filter>
+    </ClInclude>
+    <ClInclude Include="Menu.h">
       <Filter>Header files</Filter>
     </ClInclude>
   </ItemGroup>
