--- a/Chińczyk.vcxproj
+++ b/Chińczyk.vcxproj
@@ -19,6 +19,7 @@
     </ProjectConfiguration>
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="Ai.cpp" />
     <ClCompile Include="Board.cpp" />
     <ClCompile Include="Menu.cpp" />
     <ClCompile Include="Random.cpp" />
@@ -31,6 +32,7 @@
     <ClCompile Include="Ludo.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="Ai.h" />
     <ClInclude Include="Board.h" />
     <ClInclude Include="Menu.h" />
     <ClInclude Include="Random.h" />
