--- a/Chińczyk.vcxproj.filters
+++ b/Chińczyk.vcxproj.filters
@@ -45,6 +45,9 @@
     <ClCompile Include="Random.cpp">
       <Filter>Source files</Filter>
     </ClCompile>
+    <ClCompile Include="Ai.cpp">
+      <Filter>Source files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Game.h">
@@ -72,6 +75,9 @@
       <Filter>Header files</Filter>
     </ClInclude>
     <ClInclude Include="Random.h">
+      <Filter>Header files</Filter>
+    </ClInclude>
+    <ClInclude Include="Ai.h">
       <Filter>Header files</Filter>
     </ClInclude>
   </ItemGroup>
