--- a/Chińczyk.vcxproj
+++ b/Chińczyk.vcxproj
@@ -23,6 +23,8 @@
     <ClCompile Include="Board.cpp" />
     <ClCompile Include="Button.cpp" />
     <ClCompile Include="ColorSelectButton.cpp" />
+    <ClCompile Include="LeaderBoard.cpp" />
+    <ClCompile Include="InitialMenu.cpp" />
     <ClCompile Include="Menu.cpp" />
     <ClCompile Include="MenuConfirmButton.cpp" />
     <ClCompile Include="Random.cpp" />
@@ -39,6 +41,8 @@
     <ClInclude Include="Board.h" />
     <ClInclude Include="Button.h" />
     <ClInclude Include="ColorSelectButton.h" />
+    <ClInclude Include="LeaderBoard.h" />
+    <ClInclude Include="InitialMenu.h" />
     <ClInclude Include="Menu.h" />
     <ClInclude Include="MenuConfirmButton.h" />
     <ClInclude Include="Random.h" />
