--- a/Chińczyk.vcxproj.filters
+++ b/Chińczyk.vcxproj.filters
@@ -39,7 +39,7 @@
     <ClCompile Include="Dial.cpp">
       <Filter>Source files</Filter>
     </ClCompile>
-    <ClCompile Include="Menu.cpp">
+    <ClCompile Include="InitialMenu.cpp">
       <Filter>Source files</Filter>
     </ClCompile>
     <ClCompile Include="Random.cpp">
@@ -55,6 +55,12 @@
       <Filter>Source files</Filter>
     </ClCompile>
     <ClCompile Include="ColorSelectButton.cpp">
+      <Filter>Source files</Filter>
+    </ClCompile>
+    <ClCompile Include="LeaderBoard.cpp">
+      <Filter>Source files</Filter>
+    </ClCompile>
+    <ClCompile Include="Menu.cpp">
       <Filter>Source files</Filter>
     </ClCompile>
   </ItemGroup>
@@ -80,7 +86,7 @@
     <ClInclude Include="Dial.h">
       <Filter>Header files</Filter>
     </ClInclude>
-    <ClInclude Include="Menu.h">
+    <ClInclude Include="InitialMenu.h">
       <Filter>Header files</Filter>
     </ClInclude>
     <ClInclude Include="Random.h">
@@ -96,6 +102,12 @@
       <Filter>Header files</Filter>
     </ClInclude>
     <ClInclude Include="ColorSelectButton.h">
+      <Filter>Header files</Filter>
+    </ClInclude>
+    <ClInclude Include="LeaderBoard.h">
+      <Filter>Header files</Filter>
+    </ClInclude>
+    <ClInclude Include="Menu.h">
       <Filter>Header files</Filter>
     </ClInclude>
   </ItemGroup>
